--- a/.babelrc
+++ b/.babelrc
@@ -5,21 +5,18 @@
       {
         "forceAllTransforms": true,
         "targets": {
-          "browsers": [
-            "last 2 versions",
-            "edge >= 38",
-            "safari >= 9",
-            "ie >= 11",
-            "chrome >= 60",
-            "firefox >= 51"
-          ]
+          "browsers": ["edge >= 38", "safari >= 9", "ie >= 11", "chrome >= 60", "firefox >= 51"]
         },
         "modules": false
       }
     ],
     "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-proposal-object-rest-spread" , "react-hot-loader/babel"],
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "react-hot-loader/babel",
+    "babel-plugin-inline-import"
+  ],
   "env": {
     "test": {
       "plugins": ["@babel/plugin-transform-modules-commonjs"]
