--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,57 +1,30 @@
 {
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "plugins": ["react", "prettier"],
+  "rules": {
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", "jsx", ".ts", ".tsx"]
+      }
+    ],
+    "react/prop-types": 0,
+    "import/no-extraneous-dependencies": false,
+    "prettier/prettier": "error",
+    "max-len": ["error", 140]
+  },
+  "parserOptions": {
+    "ecmaVersion": 2019
+  },
   "env": {
     "browser": true,
-    "es6": true,
-    "jest": true
+    "es6": true
   },
   "settings": {
     "import/resolver": {
-      "node": {
-        "paths": ["src"],
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      "webpack": {
+        "config": "./webpack.config.js"
       }
     }
-  },
-  "extends": [
-    "airbnb"
-  ],
-  "parserOptions": {
-    "ecmaVersion": 2018,
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "sourceType": "module"
-  },
-  "globals": {
-    "fetch": true,
-    "module": true,
-    "process": true
-  },
-  "rules": {
-    "comma-dangle": ["warn", {
-      "arrays": "only-multiline",
-      "objects": "only-multiline",
-      "imports": "only-multiline",
-      "exports": "only-multiline",
-      "functions": "ignore"
-    }],
-    "import/no-named-as-default": 0,
-    "max-len": ["warn", { "code": 100 , "ignoreComments": true }],
-    "quotes": ["warn", "single", { "allowTemplateLiterals": true }],
-    "react/jsx-no-bind": ["error", {
-      "ignoreDOMComponents": false,
-      "ignoreRefs": false,
-      "allowArrowFunctions": true,
-      "allowFunctions": false,
-      "allowBind": false
-    }]
-  },
-  "overrides": [
-    {
-      "files": [ "**/*.test.js" ],
-      "rules": {
-        "react/jsx-filename-extension": [2, { "extensions": [".ts", ".tsx" ] }]
-      }
-    }
-  ]
+  }
 }
